<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_id" />

    <EditText
        android:id="@+id/edit_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/hint_id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_name" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_email" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button_add_contact"
        style="@style/ButtonStyle"
        android:text="@string/button_add" />

    <Button
        android:id="@+id/button_get_a_contact"
        style="@style/ButtonStyle"
        android:text="@string/button_get_a_contact" />

    <Button
        android:id="@+id/button_get_all_contact"
        style="@style/ButtonStyle"
        android:text="@string/button_get_all_contact" />

    <Button
        android:id="@+id/buton_update_a_contact"
        style="@style/ButtonStyle"
        android:text="@string/buttton_update_a_contact" />

    <Button
        android:id="@+id/button_delete_a_contact"
        style="@style/ButtonStyle"
        android:text="@string/button_delete_a_contact" />

    <android.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/button_get_all_assets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_get_all_contacts_from_assets" />

</LinearLayout>